Actualizacion endpoints + Swagger
